Bug 1793605 - Flush layout in window.open calls with specified size. r=emilio

Without flushing the layout, new windows appear to the opener to
initially open at the size of the opener instead of the specified size.

We can flush the layout unconditionally when we have a specified size
where we otherwise would make sure that the frame loader has been
reflowed at least once.

Thanks to Emilio for providing the changes to avoid tokenizing the
window features twice.

Differential Revision: https://phabricator.services.mozilla.com/D158584